Fixed Table text-align
Fixed the text align for the fight table

--- a/Stories/pokemonReysWayToChamp.css
+++ b/Stories/pokemonReysWayToChamp.css
@@ -47,6 +47,8 @@ h2 {
 }
 .fightTable{
     width: 100%;
+    text-align: center;
+    border: black;
 }
 
 .columns3{
